--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>歯医者架空サイト</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -72,6 +72,7 @@
                     </div>
                 </section>
                 <section class="p-main__feature">
+                    <div class="p-main__background-img"></div>
                     <div class="p-main__feature-background"></div>
                     <div class="p-main__feature-sub">
                         <h3 class="section-feature-title">当院の特徴</h3>
