--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     <div class="p-main__background-img"></div>
                     <div class="p-main__feature-background"></div>
                     <div class="p-main__feature-sub">
-                        <h3 class="section-feature-title">当院の特徴</h3>
+                        <h3 class="section-feature-title up-slide">当院の特徴</h3>
                         <div class="p-main__feature-box">
-                            <div class="p-main__feature-block p-main__feature-block-left">
+                            <div class="p-main__feature-block p-main__feature-block-left up-slide">
                                 <div class="p-main__number-img">
                                     <p class="p-main__number">01</p>
                                     <img class="p-main__mark-other-1" src="/images/Line 6.png"></img>
@@ -87,7 +87,7 @@
                                 <p class="p-main__feature-text">文書が入ります文章が入ります<br>文書が入ります文章が入ります<br>文書が入ります文章が入ります</p>
                                 <img src="/images/Ellipse 1.png" alt="親子の画像">
                             </div>
-                            <div class="p-main__feature-block p-main__feature-block-center">
+                            <div class="p-main__feature-block p-main__feature-block-center up-slide">
                                 <div class="p-main__number-img">
                                     <p class="p-main__number">02</p>
                                     <img class="p-main__mark-other-1" src="/images/Line 6.png"></img>
@@ -97,7 +97,7 @@
                                 <p class="p-main__feature-text">文書が入ります文章が入ります<br>文書が入ります文章が入ります<br>文書が入ります文章が入ります</p>
                                 <img src="/images/Ellipse 1-1.png" alt="子供の画像">
                             </div>
-                            <div class="p-main__feature-block p-main__feature-block-right">
+                            <div class="p-main__feature-block p-main__feature-block-right up-slide">
                                 <div class="p-main__number-img">
                                     <p class="p-main__number">03</p>
                                     <img class="p-main__mark-other-1" src="/images/Line 6.png"></img>
@@ -108,14 +108,14 @@
                                 <img src="/images/Ellipse 1-2.png" alt="歯科助手の画像">
                             </div> 
                         </div>
-                        <a href="#" class="p-main__feature-btn">詳しくみる</a>
+                        <a href="#" class="p-main__feature-btn up-slide">詳しくみる</a>
                     </div>
                 </section>
                 <section class="p-main__contents">
                     <div class="p-main__contents-sub">
-                        <h3 class="section-contents-title">診療内容</h3>
+                        <h3 class="section-contents-title up-slide">診療内容</h3>
                         <div class="p-main__contents-box">
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/笑顔の赤ちゃんイラスト2 1.png" alt="赤ちゃんのイラスト画像">
@@ -124,7 +124,7 @@
                                 </div>
                                 <p class="p-main__contents-text">文章が入ります文章が入ります<br>文章が入ります文章が入ります</p>
                             </div>
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/インプラントのフリー素材3 1.png" alt="虫歯のイラスト画像">
@@ -133,7 +133,7 @@
                                 </div>
                                 <p class="p-main__contents-text">文章が入ります文章が入ります<br>文章が入ります文章が入ります</p>
                             </div>
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/歯ブラシとはみがきチューブのアイコン素材 1.png" alt="歯ブラシとはみがきチューブのイラスト画像">
@@ -142,7 +142,7 @@
                                 </div>
                                 <p class="p-main__contents-text">文章が入ります文章が入ります<br>文章が入ります文章が入ります</p>
                             </div>
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/虫歯アイコン2 1.png" alt="歯周病のイラスト画像">
@@ -151,7 +151,7 @@
                                 </div>
                                 <p class="p-main__contents-text">文章が入ります文章が入ります<br>文章が入ります文章が入ります</p>
                             </div>
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/歯の線画アイコン 1.png" alt="矯正のイラスト画像">
@@ -160,7 +160,7 @@
                                 </div>
                                 <p class="p-main__contents-text">文章が入ります文章が入ります<br>文章が入ります文章が入ります</p>
                             </div>
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/歯科医のアイコン2 1.png" alt="綺麗な歯のイラスト画像">
@@ -169,7 +169,7 @@
                                 </div>
                                 <p class="p-main__contents-text">文章が入ります文章が入ります<br>文章が入ります文章が入ります</p>
                             </div>
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/歯ブラシのアイコン素材 1.png" alt="歯ブラシのイラスト画像">
@@ -178,7 +178,7 @@
                                 </div>
                                 <p class="p-main__contents-text">文章が入ります文章が入ります<br>文章が入ります文章が入ります</p>
                             </div>
-                            <div class="p-main__contents-block">
+                            <div class="p-main__contents-block up-slide">
                                 <div class="p-main__contents-circle">
                                     <div class="p-main__contents-circle-inner">
                                         <img src="/images/歯科医のアイコン4 1.png" alt="インプラントのイラスト画像">
@@ -194,10 +194,10 @@
         </div>
         <div class="p-main__access">
             <div class="p-main__access-sub">
-                <h3 class="section__access-title">アクセス</h3>
-                <img class="p-main__access-map-img" src="/images/Rectangle 12.png" alt="地図の画像">
+                <h3 class="section__access-title up-slide">アクセス</h3>
+                <img class="p-main__access-map-img up-slide" src="/images/Rectangle 12.png" alt="地図の画像">
                 <div class="p-main__access-box">
-                    <div class="p-main__access-map">
+                    <div class="p-main__access-map up-slide">
                         <img src="/images/架空歯科クリニック.png" alt="ロゴタイトル">
                         <div class="p-main__access-map-group">
                             <p class="p-main__address">〒123-4567　住所が入ります住所が入ります</p>
@@ -205,7 +205,7 @@
                         </div>
                         <a href="#"><i class="fas fa-map-marker-alt"></i>Googleマップを開く</a>
                     </div>
-                    <div class="p-main__access-table">
+                    <div class="p-main__access-table up-slide">
                         <table>
                             <tr class="reception-time">
                                 <th class="space">受付時間</th> <th>月</th> <th>火</th> <th>水</th> <th>木</th> <th>金</th> <th>土</th> <th>日</th> 
@@ -221,15 +221,15 @@
                     </div>
                 </div>
                 <div class="p-main__access-dentist">
-                    <img class="p-main__access-dentist-img" src="/images/Rectangle 16.png" alt="歯科医師の画像">
+                    <img class="p-main__access-dentist-img up-slide" src="/images/Rectangle 16.png" alt="歯科医師の画像">
                     <div class="p-main__access-reserve">
                         <div class="p-main__access-tell-box">
-                            <a class="p-main__access-reserve-tell" href="#"><i class="fas fa-phone-alt"></i>012-3456-7890</a>
+                            <a class="p-main__access-reserve-tell up-slide" href="#"><i class="fas fa-phone-alt"></i>012-3456-7890</a>
                         </div>
                         <div class="p-main__access-net-box">
-                            <a class="p-main__access-reserve-net" href="#"><i class="fas fa-desktop"></i>インターネットで予約する</a>
+                            <a class="p-main__access-reserve-net up-slide" href="#"><i class="fas fa-desktop"></i>インターネットで予約する</a>
                         </div>
-                        <p class="p-main__access-reserve-caution">※予約制になります。お電話またはインターネットでご予約ください。<br>※インターネットでのご予約は24時間受け付けております。</p>
+                        <p class="p-main__access-reserve-caution up-slide">※予約制になります。お電話またはインターネットでご予約ください。<br>※インターネットでのご予約は24時間受け付けております。</p>
                     </div>
                 </div>
             </div>
